[package]
name = "client-validator"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Santana"]
description = "Validator for the sockets project of CS230."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
rayon = "1.7.0"
